Finally fix the management of the left contents menu in documentation.
* Fix: In coriolis.css, div contents z-index should be put to 2, in order
    for the float to be *above* the enclosing div and so getting the
    mouse input (for clicking on links and scrolling).
      Also create a scrollbar when the menu is too long with the
    overflow-y property.

--- a/documentation/themes/nest-coriolis/static/css/coriolis.css
+++ b/documentation/themes/nest-coriolis/static/css/coriolis.css
@@ -63,8 +63,10 @@ div#contents {
     float:            left;
     top:              260px;
     left:             20px;
-    width:            30%;
-    z-index:          -1;
+    width:            23%;
+    max-height:       60vh;
+    z-index:          2;
+    overflow-y:       scroll;
   }
 }
 
